Updated page TechDraw Quadrants/fr

--- a/wiki/fr/TechDraw_Quadrants.html
+++ b/wiki/fr/TechDraw_Quadrants.html
@@ -1,19 +1,17 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Quadrants/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Quadrants&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Quadranten (69% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Quadranten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_Quadrants.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Quadrants (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Quadranti (69% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Dodaj wierzcho&#322;ki kwadrantu (69% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj wierzcho&#322;ki kwadrantu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; 4-&#1088;&#1077; &#1074;&#1077;&#1088;&#1096;&#1080;&#1085;&#1099; &#1087;&#1086; &#1082;&#1088;&#1072;&#1103;&#1084; &#1086;&#1082;&#1088;&#1091;&#1078;&#1085;&#1086;&#1089;&#1090;&#1080;" (38% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_Quadrants.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#49324;&#48516;&#51216; (69% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Midpoints.html" title="TechDraw Midpoints/fr">Sommet au milieu</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/fr">Ligne centrale &agrave; une face</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Supprimer un objet cosm&eacute;tique</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -141,35 +139,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111151759
+Cached time: 20260118095043
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.139 seconds
-Preprocessor visited node count: 392/1000000
-Post&#8208;expand include size: 25926/2097152 bytes
-Template argument size: 10054/2097152 bytes
+CPU time usage: 0.103 seconds
+Real time usage: 0.231 seconds
+Preprocessor visited node count: 391/1000000
+Post&#8208;expand include size: 25938/2097152 bytes
+Template argument size: 10062/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2225/5000000 bytes
+Unstrip post&#8208;expand size: 2238/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.008      1 -total
- 23.18%    8.345      1 Template:TechDraw_Tools_navi/fr
- 13.87%    4.996      1 Template:Version/fr
- 13.77%    4.958      1 Template:GuiCommand/fr
- 13.37%    4.815      2 Template:Navigation_menu_2
- 12.59%    4.535      1 Template:Userdocnavi/fr
-  9.66%    3.477      2 Template:Docnav/fr
-  6.65%    2.393      1 Template:Code
-  5.05%    1.818      1 Template:Caption
-  4.52%    1.627      1 Template:Button
+100.00%   66.990      1 -total
+ 20.40%   13.663      1 Template:TechDraw_Tools_navi/fr
+ 13.62%    9.123      1 Template:GuiCommand/fr
+ 13.35%    8.942      1 Template:Version/fr
+ 11.77%    7.885      2 Template:Navigation_menu_2
+ 10.00%    6.702      1 Template:Userdocnavi/fr
+  8.67%    5.806      1 Template:Caption
+  7.65%    5.123      1 Template:Code
+  7.18%    4.810      2 Template:Docnav/fr
+  7.04%    4.713      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156794-0!canonical and timestamp 20260111151759 and revision id 1734675. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156794-0!canonical and timestamp 20260118095043 and revision id 1740093. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
