--- a/wiki/fr/TechDraw_Quadrants.html
+++ b/wiki/fr/TechDraw_Quadrants.html
@@ -92,14 +92,12 @@
 </pre></div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Midpoints.html" title="TechDraw Midpoints/fr">Sommet au milieu</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/fr">Ligne centrale &agrave; une face</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Supprimer un objet cosm&eacute;tique</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -139,15 +137,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118095043
+Cached time: 20260118095053
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.231 seconds
-Preprocessor visited node count: 391/1000000
-Post&#8208;expand include size: 25938/2097152 bytes
-Template argument size: 10062/2097152 bytes
+CPU time usage: 0.085 seconds
+Real time usage: 0.183 seconds
+Preprocessor visited node count: 390/1000000
+Post&#8208;expand include size: 25950/2097152 bytes
+Template argument size: 10070/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -155,19 +153,19 @@ Unstrip post&#8208;expand size: 2238/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   66.990      1 -total
- 20.40%   13.663      1 Template:TechDraw_Tools_navi/fr
- 13.62%    9.123      1 Template:GuiCommand/fr
- 13.35%    8.942      1 Template:Version/fr
- 11.77%    7.885      2 Template:Navigation_menu_2
- 10.00%    6.702      1 Template:Userdocnavi/fr
-  8.67%    5.806      1 Template:Caption
-  7.65%    5.123      1 Template:Code
-  7.18%    4.810      2 Template:Docnav/fr
-  7.04%    4.713      1 Template:KEY
+100.00%   57.064      1 -total
+ 26.21%   14.955      1 Template:TechDraw_Tools_navi/fr
+ 17.20%    9.813      2 Template:Navigation_menu_2
+ 15.35%    8.760      1 Template:Userdocnavi/fr
+ 14.07%    8.029      1 Template:GuiCommand/fr
+  9.58%    5.468      1 Template:Version/fr
+  8.46%    4.828      1 Template:Caption
+  7.25%    4.135      2 Template:Docnav/fr
+  4.69%    2.674      1 Template:KEY
+  4.68%    2.673      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156794-0!canonical and timestamp 20260118095043 and revision id 1740093. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156794-0!canonical and timestamp 20260118095053 and revision id 1740095. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
