--- a/wiki/fr/TechDraw_LineGroup.html
+++ b/wiki/fr/TechDraw_LineGroup.html
@@ -69,7 +69,7 @@
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Gomme</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Supprimer un objet cosm&eacute;tique</a></div>
     <div><a href="../fr/TechDraw_Templates.html" title="TechDraw Templates/fr">Mod&egrave;les</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
@@ -113,15 +113,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118095112
+Cached time: 20260118095116
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.148 seconds
+CPU time usage: 0.065 seconds
+Real time usage: 0.120 seconds
 Preprocessor visited node count: 389/1000000
-Post&#8208;expand include size: 23369/2097152 bytes
-Template argument size: 9813/2097152 bytes
+Post&#8208;expand include size: 23444/2097152 bytes
+Template argument size: 9863/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
@@ -129,17 +129,17 @@ Unstrip post&#8208;expand size: 5364/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.232      1 -total
- 23.96%   10.836      1 Template:TechDraw_Tools_navi/fr
- 19.53%    8.836      4 Template:Code
- 15.14%    6.846      1 Template:TOCright
- 14.77%    6.680      2 Template:Navigation_menu_2
- 13.45%    6.082      1 Template:Userdocnavi/fr
- 13.29%    6.013      7 Template:Incode
-  8.48%    3.834      2 Template:Docnav/fr
+100.00%   27.970      1 -total
+ 46.92%   13.125      1 Template:TechDraw_Tools_navi/fr
+ 16.78%    4.694      2 Template:Navigation_menu_2
+ 12.96%    3.624      4 Template:Code
+ 12.46%    3.485      1 Template:Userdocnavi/fr
+  8.77%    2.452      2 Template:Docnav/fr
+  6.40%    1.790      7 Template:Incode
+  5.81%    1.624      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86974-0!canonical and timestamp 20260118095111 and revision id 1740097. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86974-0!canonical and timestamp 20260118095116 and revision id 1740099. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
