--- a/wiki/fr/TechDraw_Workbench.html
+++ b/wiki/fr/TechDraw_Workbench.html
@@ -1,6 +1,6 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Workbench/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw Module (0% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="../de/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Arbeitsbereich TechDraw (49% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Arbeitsbereich TechDraw (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Teknik Resim Tezgah&#305; (0% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Banco de Trabajo Dibujo T&eacute;cnico (15% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
@@ -8,12 +8,12 @@
 <li><a href="../hr/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw Module (0% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="Ambiente TechDraw (48% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../hu/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw Module (0% translated)" lang="hu" dir="ltr">magyar</a></li>
-<li><a href="../pl/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#346;rodowisko pracy Rysunek Techniczny (70% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pracy Rysunek Techniczny (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw Workbench/pt (0% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Bancada de trabalho TechDraw (1% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Atelierul TechDraw (Desen Tehnic) (3% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw Workbench/sv (0% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><a href="../cs/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw Workbench/cs (0% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
+<li><a href="../cs/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Pracovn&iacute; plocha TechDraw (1% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../bg/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw Module (0% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; TechDraw (9% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/TechDraw_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw Module (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -318,7 +318,7 @@
 <p><span id="Miscellaneous"></span>
 </p>
 <h3><span class="mw-headline" id="Divers">Divers</span></h3>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticEraser.svg&amp;filetimestamp=20201127100101&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Gomme</a>&nbsp;: supprime les objets cosm&eacute;tiques d'une feuille.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticEraser.svg&amp;filetimestamp=20201127100101&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Supprimer un objet cosm&eacute;tique</a>&nbsp;: supprime des objets cosm&eacute;tiques d'une feuille.</li></ul>
 <p><span id="Obsolete_Tools"></span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -420,34 +420,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111170028
+Cached time: 20260118095155
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.302 seconds
-Real time usage: 0.672 seconds
+CPU time usage: 0.333 seconds
+Real time usage: 0.527 seconds
 Preprocessor visited node count: 953/1000000
 Post&#8208;expand include size: 25593/2097152 bytes
 Template argument size: 9064/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4459/5000000 bytes
+Unstrip post&#8208;expand size: 4474/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.296      1 -total
- 23.02%   12.038      2 Template:Docnav/fr
- 20.25%   10.592      1 Template:TechDraw_Tools_navi/fr
- 16.57%    8.664     25 Template:Version/fr
- 16.54%    8.649      1 Template:Userdocnavi/fr
-  9.59%    5.015      5 Template:VersionPlus/fr
-  8.09%    4.233      2 Template:Navigation_menu_2
-  7.04%    3.679      1 Template:TOCright
-  2.96%    1.546      1 Template:KEY
+100.00%   36.507      1 -total
+ 28.85%   10.534      1 Template:TechDraw_Tools_navi/fr
+ 20.55%    7.503      2 Template:Navigation_menu_2
+ 15.14%    5.526      2 Template:Docnav/fr
+ 13.42%    4.898      1 Template:Userdocnavi/fr
+ 11.52%    4.204      5 Template:VersionPlus/fr
+ 11.28%    4.119     25 Template:Version/fr
+  7.60%    2.773      1 Template:TOCright
+  6.30%    2.300      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83074-0!canonical and timestamp 20260111170028 and revision id 1735114. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83074-0!canonical and timestamp 20260118095155 and revision id 1740101. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
