Updated page Release notes 0.19/fr

--- a/wiki/fr/Release_notes_0.19.html
+++ b/wiki/fr/Release_notes_0.19.html
@@ -889,7 +889,7 @@
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Cosmetic_eraser.png&amp;filetimestamp=20190615224150&amp;.html" class="mw-file-description"><img src="../File/Cosmetic_eraser.png" decoding="async" width="305" height="326" class="mw-file-element" data-file-width="305" data-file-height="326"></a></span>
 </td>
 <td>Nouveaux outils <a href="../fr/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/fr">TechDraw Ajout ligne m&eacute;diane &agrave; une face</a>, <a href="../fr/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/fr">TechDraw Ajout ligne centrale entre 2 ar&ecirc;tes</a> et <a href="../fr/TechDraw_2PointCenterLine.html" title="TechDraw 2PointCenterLine/fr">TechDraw Ajout ligne centrale entre 2 sommets</a> pour ajouter une ligne au centre d'une face, ou entre deux ar&ecirc;tes existantes, ou entre deux points existants, respectivement.
-<p>En outre, <a href="../fr/TechDraw_DecorateLine.html" title="TechDraw DecorateLine/fr">TechDraw Apparence des lignes</a> pour modifier l'apparence des bords simples et <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">TechDraw Gomme</a> pour supprimer l'une des fonctions cosm&eacute;tiques de la vue.
+<p>En outre, <a href="../fr/TechDraw_DecorateLine.html" title="TechDraw DecorateLine/fr">TechDraw Apparence des lignes</a> pour modifier l'apparence des bords simples et <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">TechDraw Supprimer un objet cosm&eacute;tique</a> pour supprimer l'une des fonctions cosm&eacute;tiques de la vue.
 </p><p><a rel="nofollow" class="external text" href="https://www.forum.freecad.org/viewtopic.php?f=35&amp;t=36875">Discussion sur le forum</a> (v1, alpha), <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=35&amp;t=37749">Discussion sur le forum</a> (v2), <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/commit/656e1654ff0825173a7d03f9b1b9ca8866d59adb">commit 656e1654ff</a>, <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/commit/93431edfba377c58dc1e49d68c39574057111523">commit 93431edfba</a>, <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/commit/f25826bba3124f46e267d9a4cf078dda7e6c031d">commit f25826bba3</a>, <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/commit/11d8aaed616b81eda8658f2d63bd97db5b4a87c7">commit 11d8aaed61</a>, <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/commit/941968b37cd45505a5668a1df17ba9b8d6f9a66b">commit 941968b37c</a>.
 </p>
 </td></tr>
@@ -1188,12 +1188,12 @@
 </td></tr></tbody></table>
 <!-- 
 NewPP limit report
-Cached time: 20260103113645
+Cached time: 20260118095427
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.364 seconds
-Real time usage: 0.434 seconds
+CPU time usage: 0.390 seconds
+Real time usage: 0.566 seconds
 Preprocessor visited node count: 1209/1000000
 Post&#8208;expand include size: 6674/2097152 bytes
 Template argument size: 1794/2097152 bytes
@@ -1204,19 +1204,19 @@ Unstrip post&#8208;expand size: 1760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.553      1 -total
- 19.02%    9.615      2 Template:PropertyData/fr
- 12.11%    6.124      7 Template:Variable
- 10.66%    5.387      5 Template:PropertyData
-  9.38%    4.740     36 Template:Incode
-  8.41%    4.254      6 Template:MenuCommand
-  7.73%    3.907      9 Template:Emphasis
-  7.30%    3.688      2 Template:Button
-  6.80%    3.437      1 Template:TOCright
-  6.28%    3.177      4 Template:KEY
+100.00%   28.282      1 -total
+ 13.14%    3.715      2 Template:PropertyData/fr
+ 12.95%    3.663      5 Template:PropertyData
+ 12.12%    3.429     36 Template:Incode
+ 11.89%    3.362      7 Template:Variable
+  9.29%    2.626      6 Template:MenuCommand
+  7.41%    2.096      4 Template:Value
+  6.94%    1.963      2 Template:FileName
+  5.83%    1.650      2 Template:Button
+  5.57%    1.575      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:161378-0!canonical and timestamp 20260103113644 and revision id 1727175. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:161378-0!canonical and timestamp 20260118095426 and revision id 1740105. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
