--- a/wiki/fr/TechDraw_FaceCenterLine.html
+++ b/wiki/fr/TechDraw_FaceCenterLine.html
@@ -47,7 +47,7 @@
 <th class="ctOdd">Voir aussi
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../fr/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/fr">TechDraw Sommet cosm&eacute;tique</a>, <a href="../fr/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/fr">TechDrawAdd Ligne centrale entre 2 lignes</a>, <a href="../fr/TechDraw_2PointCenterLine.html" title="TechDraw 2PointCenterLine/fr">TechDraw Ligne centrale entre 2 sommets</a>, <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">TechDraw Gomme</a>
+<td class="ctEven"><a href="../fr/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/fr">TechDraw Sommet cosm&eacute;tique</a>, <a href="../fr/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/fr">TechDrawAdd Ligne centrale entre 2 lignes</a>, <a href="../fr/TechDraw_2PointCenterLine.html" title="TechDraw 2PointCenterLine/fr">TechDraw Ligne centrale entre 2 sommets</a>, <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">TechDraw Supprimer un objet cosm&eacute;tique</a>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
@@ -146,15 +146,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116202747
+Cached time: 20260118095559
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.111 seconds
+CPU time usage: 0.091 seconds
+Real time usage: 0.154 seconds
 Preprocessor visited node count: 469/1000000
-Post&#8208;expand include size: 27356/2097152 bytes
-Template argument size: 10446/2097152 bytes
+Post&#8208;expand include size: 27406/2097152 bytes
+Template argument size: 10496/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -162,19 +162,19 @@ Unstrip post&#8208;expand size: 1665/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.582      1 -total
- 25.62%    7.066      1 Template:TechDraw_Tools_navi/fr
- 17.09%    4.714      2 Template:PropertyView
- 15.31%    4.223      2 Template:Navigation_menu_2
- 10.66%    2.939      2 Template:Variable
-  9.42%    2.597      1 Template:Userdocnavi/fr
-  9.17%    2.530      1 Template:Caption
-  8.07%    2.225      1 Template:GuiCommand/fr
-  7.38%    2.035      2 Template:Docnav/fr
-  5.34%    1.474      3 Template:Button
+100.00%   44.029      1 -total
+ 24.92%   10.971      1 Template:TechDraw_Tools_navi/fr
+ 15.59%    6.862      2 Template:Navigation_menu_2
+ 15.41%    6.785      2 Template:PropertyView
+ 10.15%    4.469      2 Template:Docnav/fr
+  9.23%    4.063      2 Template:Variable
+  8.71%    3.836      1 Template:Userdocnavi/fr
+  7.79%    3.430      1 Template:GuiCommand/fr
+  7.74%    3.409      1 Template:KEY
+  6.67%    2.936      1 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260116202747 and revision id 1739336. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156641-0!canonical and timestamp 20260118095559 and revision id 1740111. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
