--- a/wiki/fr/TechDraw_CosmeticVertex.html
+++ b/wiki/fr/TechDraw_CosmeticVertex.html
@@ -1,19 +1,17 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw CosmeticVertex/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+CosmeticVertex&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Hilfspunkt (69% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Hilfspunkt (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_CosmeticVertex.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw CosmeticVertex (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Vertice cosmetico (69% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Wstaw wierzcho&#322;ek kosmetyczny (69% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw wierzcho&#322;ek kosmetyczny (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1074;&#1089;&#1087;&#1086;&#1084;&#1086;&#1075;&#1072;&#1090;&#1077;&#1083;&#1100;&#1085;&#1091;&#1102; &#1074;&#1077;&#1088;&#1096;&#1080;&#1085;&#1091;" (38% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#44984;&#48136;&#51216; (69% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_RichTextAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/fr">Annotation texte enrichi</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ShowAll.html" title="TechDraw ShowAll/fr">Montrer tout</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Midpoints.html" title="TechDraw Midpoints/fr">Sommet au milieu</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -105,14 +103,12 @@
 </pre></div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_RichTextAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/fr">Annotation texte enrichi</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ShowAll.html" title="TechDraw ShowAll/fr">Montrer tout</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Midpoints.html" title="TechDraw Midpoints/fr">Sommet au milieu</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -152,35 +148,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111151704
+Cached time: 20260118095740
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.175 seconds
-Preprocessor visited node count: 398/1000000
-Post&#8208;expand include size: 26662/2097152 bytes
-Template argument size: 10361/2097152 bytes
+CPU time usage: 0.084 seconds
+Real time usage: 0.190 seconds
+Preprocessor visited node count: 396/1000000
+Post&#8208;expand include size: 26458/2097152 bytes
+Template argument size: 10225/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3993/5000000 bytes
+Unstrip post&#8208;expand size: 4006/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.426      1 -total
- 28.90%    9.659      1 Template:TechDraw_Tools_navi/fr
- 20.51%    6.855      2 Template:Navigation_menu_2
- 18.16%    6.069      2 Template:Docnav/fr
- 14.34%    4.794      1 Template:Userdocnavi/fr
- 10.71%    3.581      1 Template:GuiCommand/fr
-  9.14%    3.054      1 Template:Code
-  5.79%    1.935      1 Template:Caption
-  5.20%    1.739      4 Template:Button
-  4.81%    1.608      1 Template:MenuCommand
+100.00%   44.069      1 -total
+ 33.83%   14.909      2 Template:Docnav/fr
+ 28.88%   12.726      1 Template:Userdocnavi/fr
+ 18.69%    8.237      1 Template:TechDraw_Tools_navi/fr
+ 10.57%    4.659      2 Template:Navigation_menu_2
+  5.45%    2.401      1 Template:GuiCommand/fr
+  3.78%    1.667      1 Template:Code
+  2.98%    1.315      1 Template:Caption
+  2.57%    1.134      4 Template:Button
+  2.05%    0.903      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156790-0!canonical and timestamp 20260111151704 and revision id 1734641. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156790-0!canonical and timestamp 20260118095740 and revision id 1740118. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
