--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCCircularText/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCCircularText&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (92% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (93% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCCircularText.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCCircularText (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (33% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro CircularText (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CircularText (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (95% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -385,7 +385,6 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 		</li>
 </ul>  
 </center>
-<div class="mw-translate-fuzzy">
 <ul><li>Domy&#347;lnie sekcja jest ukryta. Okno jest widoczne, gdy zaznaczony jest przycisk <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> PRAWDA<span></span></span></li></ul>
 <div style="clear:both"></div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_16.png&amp;filetimestamp=20200601143709&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_16.png" decoding="async" width="492" height="452" class="mw-file-element" data-file-width="492" data-file-height="452"></a><figcaption></figcaption></figure>
@@ -397,7 +396,6 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 <li>Przycisk <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Stand</span> lub <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Flat</span>.</li></ol></li>
 <li>Aktywowany jest obszar <b>Zegar</b>.</li></ul>
 <div style="clear:both"></div>
-</div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_19.png&amp;filetimestamp=20200601140458&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_19.png" decoding="async" width="501" height="131" class="mw-file-element" data-file-width="501" data-file-height="131"></a><figcaption></figcaption></figure>
 <ul><li><b>Promie&#324; podpory</b>&nbsp;: Je&#347;li zostanie podana warto&#347;&#263;, zostanie utworzona podpora (domy&#347;lnie 0).</li>
 <li>Je&#347;li <b>Liczba &#347;cian podpory</b> jest r&oacute;&#380;na od zera, podpora zostanie utworzona. (Je&#347;li <b>Wyci&#261;gni&#281;cie podpory</b> = zero, zostanie utworzona tylko &#347;ciana).
@@ -954,35 +952,35 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117215854
+Cached time: 20260118100535
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.437 seconds
-Real time usage: 0.687 seconds
-Preprocessor visited node count: 1519/1000000
+CPU time usage: 0.368 seconds
+Real time usage: 0.637 seconds
+Preprocessor visited node count: 1518/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66939/5000000 bytes
+Unstrip post&#8208;expand size: 66948/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  396.785      1 -total
-  2.10%    8.343     10 Template:Code
-  2.04%    8.111      1 Template:Draft_Tools_navi/pl
-  1.48%    5.890      1 Template:Macro/pl
-  1.44%    5.716      7 Template:RadioButton
-  1.07%    4.262      1 Template:Userdocnavi/pl
-  1.05%    4.159      2 Template:Navigation_menu_2
-  1.04%    4.143     14 Template:Incode
-  0.96%    3.820     19 Template:Clear
-  0.89%    3.533     10 Template:CheckBox
+100.00%  417.670      1 -total
+ 46.14%  192.722     10 Template:Code
+  1.74%    7.278      1 Template:Draft_Tools_navi/pl
+  1.73%    7.236      1 Template:Macro/pl
+  1.06%    4.430      6 Template:SpinBox
+  0.88%    3.662     10 Template:CheckBox
+  0.80%    3.330      1 Template:Userdocnavi/pl
+  0.71%    2.970      3 Template:ColoredText
+  0.65%    2.729      2 Template:Navigation_menu_2
+  0.62%    2.605      7 Template:RadioButton
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260117215853 and revision id 1739692. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260118100534 and revision id 1740120. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
