Updated page Release notes 1.1/pl

--- a/wiki/pl/Release_notes_1.1.html
+++ b/wiki/pl/Release_notes_1.1.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Release notes 1.1/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Release+notes+1.1&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--high" title="Versionshinweise 1.1 (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--complete" title="Versionshinweise 1.1 (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Release_notes_1.1.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Release notes 1.1 (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--high" title="Notes de version 1.1 (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--complete" title="Notes de version 1.1 (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--med" title="Note di rilascio della versione 1.1 (42% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../ru/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--low" title="&#1055;&#1088;&#1080;&#1084;&#1077;&#1095;&#1072;&#1085;&#1080;&#1103; &#1082; &#1074;&#1099;&#1087;&#1091;&#1089;&#1082;&#1091; 1.1 (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--med" title="&#31532;1.1&#29256;&#12522;&#12522;&#12540;&#12473;&#12494;&#12540;&#12488; (43% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div class="warning-box">FreeCAD 1.1 jest w trakcie rozwoju, nie ma jeszcze oczekiwanej daty wydania.</div>
@@ -422,9 +422,7 @@ Wi&#281;cej informacji na temat sposob&oacute;w przyczyniania si&#281; do rozwoj
 <p><span id="Material_Workbench"></span>
 </p>
 <h2><span id=".C5.9Arodowisko_pracy_Materia.C5.82"></span><span class="mw-headline" id="&#346;rodowisko_pracy_Materia&#322;">&#346;rodowisko pracy Materia&#322;</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li>Materia&#322;y mog&#261; by&#263; teraz przechowywane w zewn&#281;trznych bazach danych. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/21047">Pull request #21047</a></li></ul>
-</div>
+<ul><li>Materia&#322;y mog&#261; by&#263; teraz przechowywane w zewn&#281;trznych bazach danych. Ta implementacja jest eksperymentalna i musi by&#263; aktywowana r&#281;cznie podczas kompilacji kodu &#378;r&oacute;d&#322;owego. Nie jest dost&#281;pna w standardowych kompilacjach programu FreeCAD. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/21047">Pull request #21047</a></li></ul>
 <p><span id="Further_Material_improvements"></span>
 </p>
 <h3><span id="Pozosta.C5.82e_ulepszenia_.C5.9Brodowiska_Materia.C5.82"></span><span class="mw-headline" id="Pozosta&#322;e_ulepszenia_&#347;rodowiska_Materia&#322;">Pozosta&#322;e ulepszenia &#347;rodowiska Materia&#322;</span></h3>
@@ -584,35 +582,35 @@ Wi&#281;cej informacji na temat sposob&oacute;w przyczyniania si&#281; do rozwoj
 <li>Wyr&oacute;wnanie szkic&oacute;w w eksporcie do format&oacute;w SVG i starszego DXF zosta&#322;o naprawione. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/19765">Pull request #19765</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260117220712
+Cached time: 20260118100633
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.379 seconds
-Real time usage: 1.689 seconds
-Preprocessor visited node count: 650/1000000
+CPU time usage: 0.281 seconds
+Real time usage: 0.371 seconds
+Preprocessor visited node count: 649/1000000
 Post&#8208;expand include size: 3709/2097152 bytes
 Template argument size: 664/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1546/5000000 bytes
+Unstrip post&#8208;expand size: 1560/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  102.764      1 -total
- 34.59%   35.549      2 Template:PropertyData
- 23.79%   24.443      2 Template:Variable
- 17.55%   18.038      1 Template:VersionPlus/pl
-  9.20%    9.453      2 Template:Message
-  7.30%    7.506      1 Template:Incode
-  7.06%    7.251      1 Template:VersionMinus/pl
-  6.49%    6.667      1 Template:TOCright
-  6.45%    6.626      1 Template:True/pl
-  5.61%    5.767      1 Template:VeryImportantMessage
+100.00%   22.154      1 -total
+ 19.14%    4.240      1 Template:VersionPlus/pl
+ 14.72%    3.262      2 Template:PropertyData
+ 14.69%    3.254      1 Template:True/pl
+ 11.57%    2.563      1 Template:VersionMinus/pl
+  8.79%    1.948      2 Template:Message
+  8.50%    1.884      2 Template:Variable
+  7.90%    1.751      1 Template:TOCright
+  5.27%    1.167      1 Template:VeryImportantMessage
+  4.90%    1.086      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:364125-0!canonical and timestamp 20260117220710 and revision id 1739736. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:364125-0!canonical and timestamp 20260118100632 and revision id 1740126. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
