Updated page TechDraw ExtensionVertexAtIntersection/fr

--- a/wiki/fr/TechDraw_ExtensionVertexAtIntersection.html
+++ b/wiki/fr/TechDraw_ExtensionVertexAtIntersection.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionVertexAtIntersection/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionVertexAtIntersection&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionVertexAtIntersection.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungKnotenAnSchnittstelle (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionVertexAtIntersection.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionVertexAtIntersection (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionVertexAtIntersection.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj wierzcho&#322;ek kosmetyczny na przeci&#281;ciu (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionThreadBoltBottom.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a></div>
@@ -57,13 +57,11 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez deux ar&ecirc;tes. Les ar&ecirc;tes droites seront consid&eacute;r&eacute;es comme des lignes infinies, et les arcs seront consid&eacute;r&eacute;s comme des cercles complets.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionVertexAtIntersection.svg&amp;filetimestamp=20240707204444&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionVertexAtIntersection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Intersection de lignes</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionVertexAtIntersection.svg&amp;filetimestamp=20240707204444&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionVertexAtIntersection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Intersection de lignes</b> &agrave; partir du menu.</li></ul></li>
-<li>Un sommet (vertex) cosm&eacute;tique est ajout&eacute; &agrave; chaque intersection.</li></ol>
-</div>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionVertexAtIntersection.svg&amp;filetimestamp=20240707204444&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionVertexAtIntersection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Intersection cosm&eacute;tiques de lignes</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionVertexAtIntersection.svg&amp;filetimestamp=20240707204444&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionVertexAtIntersection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Intersection cosm&eacute;tiques de lignes</b> du menu.</li></ul></li>
+<li>Un sommet cosm&eacute;tique est ajout&eacute; &agrave; chaque intersection.</li></ol>
 <p><br>
 </p>
 <div class="docnav">
@@ -111,34 +109,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118100636
+Cached time: 20260118100909
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.101 seconds
-Preprocessor visited node count: 346/1000000
-Post&#8208;expand include size: 25675/2097152 bytes
-Template argument size: 10068/2097152 bytes
+CPU time usage: 0.077 seconds
+Real time usage: 0.124 seconds
+Preprocessor visited node count: 345/1000000
+Post&#8208;expand include size: 25701/2097152 bytes
+Template argument size: 10094/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1197/5000000 bytes
+Unstrip post&#8208;expand size: 1201/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.838      1 -total
- 32.72%    7.473      1 Template:TechDraw_Tools_navi/fr
- 22.90%    5.231      2 Template:Navigation_menu_2
- 13.56%    3.097      1 Template:GuiCommand/fr
- 13.22%    3.019      1 Template:Userdocnavi/fr
- 11.84%    2.703      2 Template:Docnav/fr
- 11.06%    2.525      1 Template:Caption
-  7.86%    1.794      1 Template:MenuCommand
-  6.63%    1.515      1 Template:Button
+100.00%   37.438      1 -total
+ 26.23%    9.821      1 Template:TechDraw_Tools_navi/fr
+ 20.50%    7.675      2 Template:Navigation_menu_2
+ 19.15%    7.171      1 Template:Userdocnavi/fr
+ 14.05%    5.261      2 Template:Docnav/fr
+ 12.23%    4.577      1 Template:GuiCommand/fr
+  9.55%    3.574      1 Template:Button
+  8.54%    3.196      1 Template:Caption
+  7.36%    2.754      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277668-0!canonical and timestamp 20260118100636 and revision id 1740128. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277668-0!canonical and timestamp 20260118100908 and revision id 1740132. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
