--- a/wiki/fr/TechDraw_ExtensionVertexAtIntersection.html
+++ b/wiki/fr/TechDraw_ExtensionVertexAtIntersection.html
@@ -20,7 +20,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Lignes centrales/filetages &rarr; Intersections cosm&eacute;tiques de lignes
+<td class="ctEven">TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; Intersections cosm&eacute;tiques de lignes
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -109,15 +109,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118100909
+Cached time: 20260118100919
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.124 seconds
+CPU time usage: 0.062 seconds
+Real time usage: 0.077 seconds
 Preprocessor visited node count: 345/1000000
-Post&#8208;expand include size: 25701/2097152 bytes
-Template argument size: 10094/2097152 bytes
+Post&#8208;expand include size: 25715/2097152 bytes
+Template argument size: 10108/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -125,18 +125,18 @@ Unstrip post&#8208;expand size: 1201/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.438      1 -total
- 26.23%    9.821      1 Template:TechDraw_Tools_navi/fr
- 20.50%    7.675      2 Template:Navigation_menu_2
- 19.15%    7.171      1 Template:Userdocnavi/fr
- 14.05%    5.261      2 Template:Docnav/fr
- 12.23%    4.577      1 Template:GuiCommand/fr
-  9.55%    3.574      1 Template:Button
-  8.54%    3.196      1 Template:Caption
-  7.36%    2.754      1 Template:MenuCommand
+100.00%   14.959      1 -total
+ 33.19%    4.965      1 Template:TechDraw_Tools_navi/fr
+ 29.47%    4.408      2 Template:Navigation_menu_2
+ 15.87%    2.374      1 Template:Userdocnavi/fr
+ 13.40%    2.005      2 Template:Docnav/fr
+ 12.29%    1.838      1 Template:GuiCommand/fr
+  8.34%    1.248      1 Template:Caption
+  6.80%    1.017      1 Template:Button
+  6.78%    1.014      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277668-0!canonical and timestamp 20260118100908 and revision id 1740132. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277668-0!canonical and timestamp 20260118100919 and revision id 1740134. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
